k8s-app/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deploy
  labels:
    name: app2-deploy
    app: myapp-2
spec:
  replicas: 3
  selector:
      matchLabels:
        name: app2-pod
        app: myapp-2
  template:
    metadata:
      name: app2-pod
      labels:
        name: app2-pod
        app: myapp-2
    spec:
      containers:
        - name: app2
          image: sajjaddev/app2:v1
          ports:
          - containerPort: 80
          resources:
            limits:
               cpu: 100m
            requests:
               cpu: 50m
