k8s-app/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    name: app1-service
    app: app1
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: app1-pod
    app: myapp-1
